[gd_scene load_steps=2 format=3 uid="uid://bsmjj40v7b88v"]

[ext_resource type="Script" uid="uid://ctkej4re72f08" path="res://addons/epic_auto_folder_colors/dock/debug_panel.gd" id="1_t82pj"]

[node name="EpicDebugPanel" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_t82pj")

[node name="ScrollContainer" type="ScrollContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 16

[node name="NotSubFoldersCheck" type="CheckBox" parent="ScrollContainer/VBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
button_pressed = true
text = "Don't Check Sub-Folders"

[node name="SubFoldersColorLayersCheck" type="CheckBox" parent="ScrollContainer/VBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
text = "Sub-Folders Color By Layers"

[node name="MergeOldConfigCheck" type="CheckBox" parent="ScrollContainer/VBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
button_pressed = true
text = "Merge With Old Config"

[node name="HBoxContainer" type="HBoxContainer" parent="ScrollContainer/VBoxContainer"]
visible = false
layout_mode = 2

[node name="ManualChangeColorsButton" type="Button" parent="ScrollContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "Manual Change Folder Colors"

[node name="RefreshFilesystemButton" type="Button" parent="ScrollContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "Refresh File System
"

[node name="ReloadPluginButton" type="Button" parent="ScrollContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Reload Plugin"

[node name="DebugButton" type="Button" parent="ScrollContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Debug Button That I Have No Idea What It Does"
